--- a/WebContent/signup/finishUser.xhtml
+++ b/WebContent/signup/finishUser.xhtml
@@ -37,7 +37,7 @@
 		<p:growl id="messages" showDetail="true" sticky="true"/>
 		<p:panelGrid columns="2" cellpadding="5" styleClass="ui-noborder">
 			<p:linkButton value="No" href="userDone.xhtml?sessionID=#{user.sessionID}"/>
-			<p:linkButton value="Si" href="userCreditCard.xhtml=#{user.sessionID}"/>
+			<p:linkButton value="Si" href="userCreditCard.xhtml?sessionID=#{user.sessionID}"/>
 		</p:panelGrid>
 	</h:form>
 	</div>
