--- a/WebContent/Aplicacion/Payments.xhtml
+++ b/WebContent/Aplicacion/Payments.xhtml
@@ -56,8 +56,8 @@
 	</p:sidebar>
 	<div class="container d-flex justify-content-center">
 		<p:panelGrid columns="2" styleClass="ui-noborder">
-			<p:commandButton icon="fas fa-pencil-alt" value="Crear Cita"/>
-			<p:commandButton icon="fas fa-coins" value="Ver Pagos Pendientes"/>
+			<p:linkButton icon="fas fa-pencil-alt" value="Crear nuevo medio" href="../CRM/NewCard.xhtml?sessionID=#{user.sessionID}"/>
+			<p:linkButton icon="fas fa-coins" value="Ver Pagos Pendientes" href="PendingPayments.xhtml?sessionID=#{user.sessionID}"/>
 		</p:panelGrid>
 	</div>
 	<div class="container">
