--- a/WebContent/Aplicacion/PaymentCollection.xhtml
+++ b/WebContent/Aplicacion/PaymentCollection.xhtml
@@ -54,6 +54,12 @@
 			<p><a href="../index.xhtml" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 	</p:sidebar>
+	<div class="container d-flex justify-content-center">
+		<p:panelGrid columns="2" styleClass="ui-noborder">
+			<p:commandButton icon="fas fa-pencil-alt" value="Crear Cita"/>
+			<p:commandButton icon="fas fa-coins" value="Ver Pagos Pendientes"/>
+		</p:panelGrid>
+	</div>
 	<div class="container">
 		<br />
 		<h1>Mis Recaudos</h1>
