--- a/WebContent/signup/userCreditCard.xhtml
+++ b/WebContent/signup/userCreditCard.xhtml
@@ -34,7 +34,7 @@
 		<p:growl id="messages" showDetail="true" sticky="true"/>	
 		<p:panelGrid style="border:none;" columns="4" cellpadding="5" styleClass="ui-noborder">
 			<p:inputText id="cardCheck" pt:placeholder="Num Tarjeta" value="#{user.cardnumber}"/>
-			<p:datePicker id="expDate" pattern="MM/yyyy" view="month" yearNavigator="true" yearRange="2020:2040" pt:placeholder="Fecha Expiración" value="#{user.cardExpdateForm}"/>
+			<p:datePicker id="expDate" pattern="MM/yyyy" view="month" yearNavigator="true" yearRange="2020:2040" pt:placeholder="Fecha Expiración" value="#{user.cardexpDate}"/>
 			<p:inputText thousandSeparator="" id="ccv" pt:placeholder="CCV" value="#{user.cardccv}"/>
 			<p:inputText id="owner" pt:placeholder="Titular de la tarjeta" value="#{user.cardBelongsTo}"/>
 		</p:panelGrid>
