--- a/WebContent/signup/page3.xhtml
+++ b/WebContent/signup/page3.xhtml
@@ -38,7 +38,7 @@
 		<h1>¿Si eres profesional en belleza, quieres trabajar con nosotros?</h1>	
 		<p:panelGrid style="border:none;" columns="2" cellpadding="5" styleClass="ui-noborder">
 			<p:linkButton value="No" href="finishUser.xhtml?sessionID=#{user.sessionID}"/>
-			<p:linkButton value="Si"/>
+			<p:linkButton value="Si" href="professionalDone.xhtml?sessionID=#{user.sessionID}"/>
 		</p:panelGrid>
 	</h:form>
 	</div>
