--- a/WebContent/Administracion/index.xhtml
+++ b/WebContent/Administracion/index.xhtml
@@ -24,7 +24,10 @@
 	</nav>
 </header>
 <h:body>
-	<c:attribute name="username" value="#{user.name}"/>
+	<c:metadata>
+		<c:viewParam name="sessionID" value="#{user.sessionID}"></c:viewParam>
+	</c:metadata>
+	<p>#{user.validateSessionID()}</p>
 	<p:sidebar widgetVar="sidebarOperations" baseZIndex="10000">
 		<br />
 		<h1 style="text-align: center;"><i class="fas fa-user-circle fa-3x"/></h1>
@@ -32,16 +35,22 @@
 		<p style="text-align: center;" class="text-muted">¿Qué quieres hacer hoy?</p>
 		<br />
 		<p:panelGrid columns="1" styleClass="ui-noborder" id="userPanel" rendered="true">
-			<p><a><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
-			<p><a><i class="fas fa-store"/> Puntos</a></p>
-			<p><a><i class="fas fa-file-contract"/> Solicitudes Pendientes</a></p>
-			<p><a><i class="fas fa-chart-line"/> Estadísticas</a></p>
-			<p><a><i class="fas fa-users"/> Clientes</a></p>
-			<p><a><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
+			<p><a href="Account.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
+			<p><a href="index.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-store"/> Puntos</a></p>
+			<p><a href="Requests.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-file-contract"/> Solicitudes Pendientes</a></p>
+			<p><a href="Statics.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-chart-line"/> Estadísticas</a></p>
+			<p><a href="Clients.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-users"/> Clientes</a></p>
+			<p><a href="../index.xhtml" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 	</p:sidebar>
+	<p:sidebar widgetVar="newLocation" baseZIndex="10000" fullScreen="true">
+		<div class="container">
+			<iframe src="../CRM/NewLocation.xhtml" width="100%" height="600" style="border:none;"/>
+		</div>
+	</p:sidebar>
 	<div class="container d-flex justify-content-center">
-		<p:panelGrid columns="3" styleClass="ui-noborder">
+		<p:panelGrid columns="4" styleClass="ui-noborder">
+			<p:commandButton icon="fas fa-plus" value=" Agregar Punto" onclick="PF('newLocation').show()"/>
 			<p:commandButton icon="fas fa-file-download" value=" Descargar Reporte"/>
 			<p:commandButton icon="fas fa-file-contract" value="Solicitudes"/>
 			<p:commandButton icon="fas fa-users" value=". Clientes"/>
@@ -50,11 +59,24 @@
 	<div class="container">
 		<br />
 		<h1>Puntos</h1>
-		<p:dataTable var="appointments" value="server.db.getuserappointments">
-			<p:column headerText="Sede"></p:column>
-			<p:column headerText="Ubicación"></p:column>
-			<p:column headerText="Aforo"></p:column>
-			<p:column headerText="Detalle"></p:column>
+		<p:dataTable var="myLocations" styleClass="table table-striped table-bordered" value="#{server.db.getLOCATIONS()}" rows="5" paginator="true">
+			<p:column headerText="Sede">
+				<h:outputText value="#{myLocations.name}"/>
+			</p:column>
+			<p:column headerText="Ubicación">
+				<h:outputText value="#{myLocations.address}"/>
+			</p:column>
+			<p:column headerText="Aforo">
+				<h:outputText value="#{myLocations.actualCapacity}/#{myLocations.maxCapacity}"/>
+			</p:column>
+			<p:column headerText="Operaciones">
+				<h:form>
+					<p:menuButton value="Operaciones">
+						<p:menuitem value="Editar" icon="fas fa-edit"/>
+						<p:menuitem value="Eliminar" icon="fas fa-minus"/>
+					</p:menuButton>
+				</h:form>
+			</p:column>
 		</p:dataTable>
 	</div>
 	<br />
