--- a/WebContent/signup/professionalDone.xhtml
+++ b/WebContent/signup/professionalDone.xhtml
@@ -20,6 +20,10 @@
 	</nav>
 </header>
 <h:body>
+	<c:metadata>
+		<c:viewParam name="sessionID" value="#{user.sessionID}"></c:viewParam>
+	</c:metadata>
+	<p>#{user.validateSessionID()}</p>
 	<br />
 	<h1 style="text-align: center;">Crear una cuenta</h1>
 	<br />
@@ -28,10 +32,10 @@
 			<div class="card-img-top d-flex justify-content-center">
 				<i class="fas fa-check-circle fa-8x" style="color: Green" />
 			</div>
-			<h2 style="text-align: center;">¡Gracias #{nombre}!</h2>
+			<h2 style="text-align: center;">¡Gracias #{username}!</h2>
 			<p style="text-align: center;">Terminaste de manera satisfactoria tu registro. Una vez verifiquemos que todo está en orden añadiremos las funciones correspondientes a tu cuenta. Por ahora puedes ingresar como un usuario normal.</p>
 			<div class="d-flex justify-content-end">
-				<p:commandButton value="Haz click aquí para acceder a tu cuenta" />
+				<p:commandButton value="Haz click aquí para acceder a tu cuenta" onfocus="#{user.professionalDone()}" action="#{user.professionalDone()}"/>
 			</div>
 		</p:panelGrid>
 	</div>
