--- a/WebContent/signup/userDone.xhtml
+++ b/WebContent/signup/userDone.xhtml
@@ -34,7 +34,7 @@
 			</div>
 			<h2 style="text-align: center;">¡Gracias #{username}!</h2>
 			<p style="text-align: center;">Terminaste de manera satisfactoria tu registro.</p>
-			<p:commandButton value="Haz click aquí para acceder a tu cuenta" onfocus="#{user.doneRegistration()}" action="#{user.doneRegistration()}"/>
+			<p:commandButton value="Haz click aquí para acceder a tu cuenta" onfocus="#{user.doneRegistration()}"/>
 		</p:panelGrid>
 	</div>
 	<br />
