--- a/WebContent/Aplicacion/login.xhtml
+++ b/WebContent/Aplicacion/login.xhtml
@@ -29,7 +29,7 @@
 			<p:inputText id="username" pt:placeholder="Usuario" required="true" value="#{user.username}" requiredMessage="El usuario no puede estar vacío"/>
 			<p:password id="password" pt:placeholder="Contraseña" required="true" value="#{user.password}" requiredMessage="Todo usuario debe tener contraseña"/>
 			<p:selectBooleanCheckbox itemLabel="Recordarme"/>
-			<p:link href="forgotPassword.xhtml">¿Olvidaste tu contraseña?</p:link>
+			<p:link href="../forgot/forgotPassword.xhtml">¿Olvidaste tu contraseña?</p:link>
 		</p:panelGrid>
 		<p:panelGrid columns="2" cellpadding="5" styleClass="ui-noborder">
 			<p:linkButton value="Registrarse" href="../signup/page1.xhtml"/>
