--- a/WebContent/Administracion/Clients.xhtml
+++ b/WebContent/Administracion/Clients.xhtml
@@ -53,12 +53,27 @@
 	<div class="container">
 		<br />
 		<h1>Clientes</h1>
-		<p:dataTable var="clients" styleClass="table table-striped table-bordered" value="server.db.getAllClients">
-			<p:column headerText="Nombre"></p:column>
-			<p:column headerText="Usuario"></p:column>
-			<p:column headerText="Correo"></p:column>
-			<p:column headerText="Tipo de Usuario"></p:column>
-			<p:column headerText="Operaciones"></p:column>
+		<p:dataTable var="clients" styleClass="table table-striped table-bordered" value="#{user.listUsers()}" paginator="true" rows="50">
+			<p:column headerText="Nombre">
+				<h:outputText value="#{clients.name}"/>
+			</p:column>
+			<p:column headerText="Usuario">
+				<h:outputText value="#{clients.username}"/>
+			</p:column>
+			<p:column headerText="Correo">
+				<h:outputText value="#{clients.email}"/>
+			</p:column>
+			<p:column headerText="Tipo de Usuario">
+				<h:outputText value="#{clients.role}"/>
+			</p:column>
+			<p:column headerText="Operaciones">
+				<h:form>
+					<p:menuButton value="Operaciones">
+						<p:menuitem value="Editar" icon="fas fa-edit"/>
+						<p:menuitem value="Eliminar" icon="fas fa-minus"/>
+					</p:menuButton>
+				</h:form>
+			</p:column>
 		</p:dataTable>
 	</div>
 	<br />
