--- a/WebContent/Administracion/Statics.xhtml
+++ b/WebContent/Administracion/Statics.xhtml
@@ -43,17 +43,28 @@
 			<p><a href="../index.xhtml" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 	</p:sidebar>
+	<p:sidebar widgetVar="emailSender" baseZIndex="10000" position="bottom">
+		<h:form>
+			<div class="container d-flex justify-content-center">
+				<p:panelGrid columns="1" styleClass="ui-noborder" rendered="true">
+					<p class="text-muted">Al generar el reporte estas de acuedo con el acuerdo de confidencialidad.</p>
+					<p:panelGrid columns="2" styleClass="ui-noborder" id="generationForm" rendered="true">
+						<p:inputText pt:placeholder="Email" value="#{reporter.email}"/>
+						<p:commandButton icon="fas fa-file-download" value=" Generar y Enviar" action="#{reporter.generateAndSend()}"/>
+					</p:panelGrid>
+				</p:panelGrid>
+			</div>
+		</h:form>
+	</p:sidebar>
 	<div class="container d-flex justify-content-center">
 		<p:panelGrid columns="3" styleClass="ui-noborder">
-			<p:commandButton icon="fas fa-file-download" value=" Descargar Reporte"/>
-			<p:commandButton icon="fas fa-file-contract" value="Solicitudes"/>
-			<p:commandButton icon="fas fa-users" value=". Clientes"/>
+			<p:commandButton icon="fas fa-file-download" value=" Descargar Reporte" onclick="PF('emailSender').show()"/>
 		</p:panelGrid>
 	</div>
 	<div class="container">
 		<br />
 		<h1>Estadísticas</h1>
-		<p:barChart/>
+		<p:barChart model="#{reporter.barModel}" style="width: 100%; height: 400px;"/>
 	</div>
 	<br />
 </h:body>
