--- a/WebContent/Aplicacion/index.xhtml
+++ b/WebContent/Aplicacion/index.xhtml
@@ -39,18 +39,18 @@
 		<p style="text-align: center;" class="text-muted">¿Qué quieres hacer hoy?</p>
 		<br />
 		<p:panelGrid columns="1" styleClass="ui-noborder" id="userPanel" rendered="#{userRole}">
-			<p><a href="Account.xhtml" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
-			<p><a href="Payments.xhtml" style="color: Black;"><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
-			<p><a href="Appointments.xhtml" style="color: Black;"><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
-			<p><a href="../index.xhtml" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
+			<p><a href="Account.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
+			<p><a href="Payments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
+			<p><a href="Appointments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
+			<p><a href="../index.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 		<p:panelGrid columns="1" styleClass="ui-noborder" id="professionalPanel" rendered="#{professionalRole}">
-			<p><a href="Account.xhtml" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
-			<p><a href="Payments.xhtml" style="color: Black;"><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
-			<p><a href="Appointments.xhtml" style="color: Black;"><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
-			<p><a href="Clients.xhtml" style="color: Black;"><i class="fas fa-users"/> Mis Clientes</a></p>
-			<p><a href="Assigned.xhtml" style="color: Black;"><i class="fas fa-calendar-check"/> Mis Citas Asignadas</a></p>
-			<p><a href="PaymentCollection.xhtml" style="color: Black;"><i class="fas fa-piggy-bank"/> Mis Recaudos</a></p>
+			<p><a href="Account.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
+			<p><a href="Payments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
+			<p><a href="Appointments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
+			<p><a href="Clients.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-users"/> Mis Clientes</a></p>
+			<p><a href="Assigned.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-calendar-check"/> Mis Citas Asignadas</a></p>
+			<p><a href="PaymentCollection.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-piggy-bank"/> Mis Recaudos</a></p>
 			<p><a href="../index.xhtml" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 	</p:sidebar>
