--- a/WebContent/Administracion/Clients.xhtml
+++ b/WebContent/Administracion/Clients.xhtml
@@ -37,17 +37,19 @@
 		<p:panelGrid columns="1" styleClass="ui-noborder" id="userPanel" rendered="true">
 			<p><a href="Account.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
 			<p><a href="index.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-store"/> Puntos</a></p>
-			<p><a href="Requests.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-file-contract"/> Solicitudes Pendientes</a></p>
 			<p><a href="Statics.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-chart-line"/> Estadísticas</a></p>
 			<p><a href="Clients.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-users"/> Clientes</a></p>
 			<p><a href="../index.xhtml" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 	</p:sidebar>
+	<p:sidebar widgetVar="newClientCreation" baseZIndex="10000" fullScreen="true">
+		<div class="container">
+			<iframe src="../CRM/NewClient.xhtml" width="100%" height="600" style="border:none;"/>
+		</div>
+	</p:sidebar>
 	<div class="container d-flex justify-content-center">
 		<p:panelGrid columns="3" styleClass="ui-noborder">
-			<p:commandButton icon="fas fa-file-download" value=" Descargar Reporte"/>
-			<p:commandButton icon="fas fa-file-contract" value="Solicitudes"/>
-			<p:commandButton icon="fas fa-users" value=". Clientes"/>
+			<p:commandButton icon="fas fa-plus" value="Agregar Usuario" onclick="PF('newClientCreation').show()"/>
 		</p:panelGrid>
 	</div>
 	<div class="container">
