--- a/WebContent/Aplicacion/Payments.xhtml
+++ b/WebContent/Aplicacion/Payments.xhtml
@@ -40,12 +40,14 @@
 		<br />
 		<p:panelGrid columns="1" styleClass="ui-noborder" id="userPanel" rendered="#{userRole}">
 			<p><a href="Account.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
+			<p><a href="index.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-history"/> Historial</a></p>
 			<p><a href="Payments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
 			<p><a href="Appointments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
 			<p><a href="../index.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 		<p:panelGrid columns="1" styleClass="ui-noborder" id="professionalPanel" rendered="#{professionalRole}">
 			<p><a href="Account.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
+			<p><a href="index.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-history"/> Historial</a></p>
 			<p><a href="Payments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
 			<p><a href="Appointments.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
 			<p><a href="Clients.xhtml?sessionID=#{user.sessionID}" style="color: Black;"><i class="fas fa-users"/> Mis Clientes</a></p>
@@ -62,14 +64,10 @@
 	</div>
 	<div class="container">
 		<br />
-		<h1>Historial</h1>
+		<h1>Métodos de pago</h1>
 		<p:dataTable var="appointments" value="server.db.getuserappointments">
-			<p:column headerText="Fecha"></p:column>
-			<p:column headerText="Profesional"></p:column>
-			<p:column headerText="Valor"></p:column>
-			<p:column headerText="Lugar"></p:column>
-			<p:column headerText="Forma de Pago"></p:column>
-			<p:column headerText="Estado"></p:column>
+			<p:column headerText="Numero Tarjeta"></p:column>
+			<p:column headerText="Operaciones"></p:column>
 		</p:dataTable>
 	</div>
 	<br />
