--- a/WebContent/error/comingsoon.html
+++ b/WebContent/error/comingsoon.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Pelubosque</title>
-<link rel="stylesheet" href="${pageContext.request.contextPath}/PelubosqueCaratulas/resources/css/bootstrap.css">
+<link rel="stylesheet" href="../resources/css/bootstrap.css">
+<link rel="stylesheet" href="../PelubosqueCaratulas/resources/css/bootstrap.css">
 <script src="https://kit.fontawesome.com/302a1eb3e6.js"></script>
 </head>
 <header>
