--- a/WebContent/signup/professionalDone.xhtml
+++ b/WebContent/signup/professionalDone.xhtml
@@ -27,6 +27,7 @@
 	<br />
 	<h1 style="text-align: center;">Crear una cuenta</h1>
 	<br />
+	<h:form>
 	<div class="container d-flex justify-content-center">
 		<p:panelGrid columns="1" styleClass="ui-noborder">
 			<div class="card-img-top d-flex justify-content-center">
@@ -35,10 +36,11 @@
 			<h2 style="text-align: center;">¡Gracias #{username}!</h2>
 			<p style="text-align: center;">Terminaste de manera satisfactoria tu registro. Una vez verifiquemos que todo está en orden añadiremos las funciones correspondientes a tu cuenta. Por ahora puedes ingresar como un usuario normal.</p>
 			<div class="d-flex justify-content-end">
-				<p:commandButton value="Haz click aquí para acceder a tu cuenta" onfocus="#{user.professionalDone()}" action="#{user.professionalDone()}"/>
+				<p:commandButton value="Haz click aquí para acceder a tu cuenta" action="#{user.professionalDone()}"/>
 			</div>
 		</p:panelGrid>
 	</div>
+	</h:form>
 	<br />
 </h:body>
 <footer class="bg-dark fixed-bottom">
