--- a/WebContent/CRM/NewAppointment.xhtml
+++ b/WebContent/CRM/NewAppointment.xhtml
@@ -20,14 +20,20 @@
 	<div class="container d-flex justify-content-center">
 	<h:form class="form">
 		<p:growl id="messages" showDetail="true" sticky="true"/>	
-		<p:panelGrid style="border:none;" columns="4" cellpadding="5" styleClass="ui-noborder">
-			<p:inputNumber id="cardCheck" thousandSeparator="" decimalPlaces="0" pt:placeholder="Num Tarjeta"/>
-			<p:datePicker id="expDate" pattern="MM/yyyy" view="month" yearNavigator="true" yearRange="2020:2040" pt:placeholder="Fecha Expiración"/>
-			<p:inputNumber id="ccv" pt:placeholder="CCV"/>
-			<p:inputText id="owner" pt:placeholder="Titular de la tarjeta"/>
+		<p:panelGrid style="border:none;" columns="2" cellpadding="5" styleClass="ui-noborder">
+			<p:inputText pt:placeholder="Motivo" value="#{Appointments.name}"/>
+			<p:selectOneMenu pt:placeholder="Ubicacion" value="#{Appointments.location}">
+				<c:selectItem itemLabel="#{user.address} (mi domicilio)"/>
+				<c:selectItems value="#{server.db.getLOCATIONNAMES()}"/>
+			</p:selectOneMenu>
+			<p:selectOneMenu pt:placeholder="Profesional" value="#{Appointments.professional}">
+				<c:selectItem itemLabel="No especifico"/>
+				<c:selectItems value="#{user.listProfessional()}"/>
+			</p:selectOneMenu>
+			<p:inputText pt:placeholder="Método de pago" value="#{Appointments.paymentMethod}"/>
 		</p:panelGrid>
 		<p:panelGrid columns="2" styleClass="ui-noborder">
-			<p:commandButton value="Registrar Cita"/>
+			<p:commandButton value="Registrar Cita" action = "#{Appointments.newAppointment()}"/>
 		</p:panelGrid>
 	</h:form>
 	</div>
